--- a/.github/workflows/node.yaml
+++ b/.github/workflows/node.yaml
@@ -19,8 +19,18 @@ jobs:
       with:
         fetch-depth: 0
 
-    - name: Set up Docker Buildx
-      uses: docker/setup-buildx-action@v3
+    - name: Set up Node
+      uses: actions/setup-node@v4
+      with:
+        node-version: '23'
+
+    - name: Install dependencies
+      run: cd ./node-app && npm install
+
+    - name: Build Image
+      run: |
+        cd ./node-app
+        docker build --cache-from=node:23-alpine3.21 -t node-app:latest .
     
     - name: Log in to ACR
       uses: azure/docker-login@v2
@@ -29,10 +39,7 @@ jobs:
         username: ${{ secrets.AZURE_REGISTRY_USERNAME }}
         password: ${{ secrets.AZURE_REGISTRY_PASSWORD }}
 
-    - name: Build and push
-      uses: docker/build-push-action@v6
-      with:
-        context: node-app
-        push: true
-        tags: |
-          ${{ secrets.AZURE_REGISTRY_LOGIN_SERVER }}/node-app:latest
+    - name: Tag & Push
+      run: |
+        docker tag node-app:latest ${{ secrets.AZURE_REGISTRY_LOGIN_SERVER }}/node-app:latest
+        docker push ${{ secrets.AZURE_REGISTRY_LOGIN_SERVER }}/node-app:latest
