Set SSH key via secrets

--- a/.github/workflows/node.yaml
+++ b/.github/workflows/node.yaml
@@ -4,9 +4,13 @@ on:
   push:
     branches:
       - main
+    paths:
+      - './node-app/**'
   pull_request:
     branches:
       - main
+    paths:
+      - './node-app/**'
   workflow_dispatch:
 
 jobs:
