--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -26,7 +26,7 @@ env:
 
 jobs:
   deploy:
-    if: ${{ github.event.workflow_run.conclusion == 'success' }}
+    if: ${{ github.event_name != 'workflow_dispatch' || github.event.workflow_run.conclusion == 'success' }}
     name: Deploy to Azure WebApp
     runs-on: ubuntu-latest
     env:
@@ -60,6 +60,7 @@ jobs:
 
     - name: Pull Docker image
       run: |
+        az acr login --name ${{ secrets.ACR_NAME }}
         docker pull ${{ secrets.AZURE_REGISTRY_LOGIN_SERVER }}/node-app:${{ github.event.inputs.version }}
 
     - name: Get current version
