--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -85,10 +85,10 @@ jobs:
     - name: Fetch App Insights logs
       id: logcheck
       run: |
-        TIMESTAMP=$(date -u -d "2 months ago" +"%Y-%m-%dT%H:%M:%SZ")
+        TIMESTAMP=$(date -u -d "2 minutes ago" +"%Y-%m-%dT%H:%M:%SZ")
         ERRORS=$(az monitor log-analytics query \
           --workspace $ANALYTICS_WORKSPACE_ID \
-          --analytics-query "AppTraces | where TimeGenerated > datetime($TIMESTAMP) | where SeverityLevel >= 3 | count" \
+          --analytics-query "AppServiceConsoleLogs | where TimeGenerated > datetime($TIMESTAMP) | where Level == 'Error' | count" \
           --query "[0].Count" \
           --output tsv)
         echo "errors=${ERRORS}" >> $GITHUB_OUTPUT
