--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -21,6 +21,7 @@ env:
   ARM_TENANT_ID: "${{ secrets.AZURE_TENANT_ID }}"
   RESOURCE_GROUP: node-app
   WEBAPP_NAME: node-app-web
+  IMAGE_TAG: ${{ github.event.inputs.version || 'latest' }}
   ANALYTICS_WORKSPACE_ID: 3f19e395-a518-4bef-8d53-d4e226230edb 
   CONTAINER_PORT: 80
 
@@ -60,8 +61,7 @@ jobs:
 
     - name: Pull Docker image
       run: |
-        az acr login --name ${{ secrets.ACR_NAME }}
-        docker pull ${{ secrets.AZURE_REGISTRY_LOGIN_SERVER }}/node-app:${{ github.event.inputs.version }}
+        docker pull ${{ secrets.AZURE_REGISTRY_LOGIN_SERVER }}/node-app:${{ env.IMAGE_TAG }}
 
     - name: Get current version
       run: |
@@ -74,7 +74,7 @@ jobs:
         az webapp config container set \
           --name $WEBAPP_NAME \
           --resource-group $RESOURCE_GROUP \
-          --docker-custom-image-name ${{ secrets.AZURE_REGISTRY_LOGIN_SERVER }}/node-app:${{ github.event.inputs.version }} \
+          --docker-custom-image-name ${{ secrets.AZURE_REGISTRY_LOGIN_SERVER }}/node-app:${{ env.IMAGE_TAG }} \
           --docker-registry-server-url https://${{ secrets.AZURE_REGISTRY_LOGIN_SERVER }} \
           --docker-registry-server-user ${{ secrets.AZURE_REGISTRY_USERNAME }} \
           --docker-registry-server-password ${{ secrets.AZURE_REGISTRY_PASSWORD }}
